--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve:dev:delay_api": "nodemon --watch './**/*.ts' --ignore './**/*.spec.ts' --exec  ts-node -r tsconfig-paths/register delay_api/app.ts"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,16 @@
   "bugs": {
     "url": "https://github.com/siddharthrajaraja/Kafka-Delay-Producer/issues"
   },
-  "homepage": "https://github.com/siddharthrajaraja/Kafka-Delay-Producer#readme"
+  "homepage": "https://github.com/siddharthrajaraja/Kafka-Delay-Producer#readme",
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.3",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.8.2",
+    "tsconfig-paths": "^4.0.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1"
+  }
 }
