--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve:dev:delay_api": "nodemon --watch './**/*.ts' --ignore './**/*.spec.ts' --exec  ts-node -r tsconfig-paths/register delay_api/app.ts",
-    "serve:dev:kafka_producer": "nodemon --watch './**/*.ts' --ignore './**/*.spec.ts' --exec  ts-node -r tsconfig-paths/register kafka_producer/app.ts"
+    "serve:dev:kafka_producer": "nodemon --watch './**/*.ts' --ignore './**/*.spec.ts' --exec  ts-node -r tsconfig-paths/register kafka_producer/app.ts",
+    "serve:dev:redis_subscriber": "nodemon --watch './**/*.ts' --ignore './**/*.spec.ts' --exec  ts-node -r tsconfig-paths/register redis_subscriber/app.ts"
   },
   "repository": {
     "type": "git",
