--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.3",
+    "mongoose": "^6.4.4",
     "nodemon": "^2.0.19",
     "ts-node": "^10.8.2",
     "tsconfig-paths": "^4.0.0"
