--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
   },
   "homepage": "https://github.com/siddharthrajaraja/Kafka-Delay-Producer#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.3",
+    "@types/redis": "^4.0.11",
+    "axios": "^0.27.2",
     "mongoose": "^6.4.4",
     "nodemon": "^2.0.19",
     "ts-node": "^10.8.2",
     "tsconfig-paths": "^4.0.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "redis": "^4.2.0"
