--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "kafkajs": "^2.1.0",
     "redis": "^4.2.0"
   }
 }
